* Support separate PPS devices for PARSE refclocks
* [Bug 637, 51?] Dynamic interface scanning can now be done
* Options processing now uses GNU AutoGen

(4.2.2p3) Released by Harlan Stenn <stenn@ntp.isc.org>
 * Make the ChangeLog file cleaner and easier to read
 * [Bug 601] ntpq's decodeint uses an extra level of indirection
 * [Bug 657] Different OSes need different sized args for IP_MULTICAST_LOOP
 * release engineering/build changes
 * Documentation fixes
 * Get sntp working under AIX-5

(4.2.2p2) (broken)
 * Get sntp working under AIX-5

(4.2.2p1)
 * [Bug 661] Use environment variable to specify the base path to openssl.
 * Resolve an ambiguity in the copyright notice
 * Added some new documentation files
 * URL cleanup in the documentation
 * [Bug 657]: IP_MULTICAST_LOOP uses a u_char value/size
 * quiet gcc4 complaints
 * more Coverity fixes
 * [Bug 614] manage file descriptors better
 * [Bug 632] update kernel PPS offsets when PPS offset is re-configured
 * [Bug 637] Ignore UP in*addr_any interfaces
 * [Bug 633] Avoid writing files in srcdir
 * release engineering/build changes

(4.2.2)
 * SNTP
 * Many bugfixes
 * Implements the current "goal state" of NTPv4
 * Autokey improvements
 * Much better IPv6 support
 * Rewrite of the multicast code
 * New version numbering scheme

(4.2.0)
* More stuff than I have time to document
* IPv6 support
* Bugfixes
* call-gap filtering
* wwv and chu refclock improvements
* OpenSSL integration

(4.1.2)
* clock state machine bugfix
* Lose the source port check on incoming packets
* (x)ntpdc compatibility patch
* Virtual IP improvements
* ntp_loopfilter fixes and improvements
* ntpdc improvements
* GOES refclock fix
* JJY driver
* Jupiter refclock fixes
* Neoclock4X refclock fixes
* AIX 5 port
* bsdi port fixes
* Cray unicos port upgrade
* HP MPE/iX port
* Win/NT port upgrade
* Dynix PTX port fixes
* Document conversion from CVS to BK
* readline support for ntpq

(4.1.0)
* CERT problem fixed (99k23)
* Huff-n-Puff filter