@@ -1,3 +1,5 @@
+* [Bug 342] Deprecate broken TRAK refclock driver
+* [Bug 340] Deprecate broken MSF EES refclock driver
 * Support separate PPS devices for PARSE refclocks
 * [Bug 637, 51?] Dynamic interface scanning can now be done
 * Options processing now uses GNU AutoGen
